# agentdeck

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs  server.rs  state.rs
crates/daemon/tests/: http_contract.rs  state_machine.rs
docs/: OBSERVED.md  SPEC.md
docs/payloads/: Notification-0058.json  Notification-0066.json  Notification-0070.json  PostToolUse-0011.json  PostToolUse-0018.json  PostToolUse-0021.json  PostToolUse-0029.json  PostToolUse-0038.json  PostToolUse-0042.json  PreToolUse-0008.json  PreToolUse-0016.json  PreToolUse-0019.json  PreToolUse-0023.json  PreToolUse-0036.json  PreToolUse-0040.json  SessionEnd-0005.json  SessionEnd-0013.json  SessionEnd-0033.json  SessionEnd-0049.json  SessionEnd-0050.json  SessionEnd-0055.json  SessionEnd-0059.json  SessionEnd-0064.json  SessionEnd-0067.json  SessionStart-0001.json  SessionStart-0002.json  SessionStart-0006.json  SessionStart-0014.json  SessionStart-0034.json  SessionStart-0052.json  SessionStart-0056.json  Stop-0004.json  Stop-0012.json  Stop-0022.json  Stop-0027.json  Stop-0032.json  Stop-0039.json  Stop-0045.json  Stop-0048.json  Stop-0061.json  (+30 more)
scripts/: install-hooks.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  app.css
