[package]
name = "agentdeck-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bin]]
name = "discover"
path = "src/bin/discover.rs"

[[bin]]
name = "agentdeck-daemon"
path = "src/main.rs"
